# rust_web

./: Cargo.toml  README.md
alpine_html/: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  fly.toml  tailwind.config.cjs
alpine_html/assets/: main.css
alpine_html/public/: main.css
alpine_html/src/: constants.rs  layouts.rs  main.rs
alpine_html/src/components/: mod.rs  user_table.rs
alpine_html/src/routes/: home.rs  mod.rs  todos.rs  users.rs  utils.rs
beamup/: .gitignore  Cargo.toml  Dockerfile  Taskfile.yml  fly.toml
beamup/assets/: main.css
beamup/src/: constants.rs  lib.rs  main.rs
beamup/src/components/: banners.rs  button.rs  mod.rs  user_table.rs
beamup/src/routes/: events.rs  home.rs  landing.rs  layout.rs  mod.rs  utils.rs
beamup/styles/: tailwind.css
