[workspace]
members = ["alpine_html"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
miette = { version = "7.4", features = ["fancy"] }