[package]
name = "alpine_html"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
rust_html = { version = "1.1.5", features = ["axum"]}
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-livereload = "0.9.5"
miette.workspace = true
test-log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
