[package]
name = "beamup"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
rust_html = { version = "1.1.5", features = ["axum"]}
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-livereload = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
miette = { version = "7.4", features = ["fancy"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.39", features = ["serde"] }
